fixed alignment when one does not provide an icon for the message

--- a/toastr.less
+++ b/toastr.less
@@ -51,12 +51,10 @@
 			color: @light-grey;
 			text-decoration: none;
 		}
-        padding-left: 5px;
 }
 
 .toast-icon {
-//  padding-right: 5px;
-//  margin: 5;
+  padding-right: 5px;
 }
 
 .toast-close-button {
